<resources>
    <string name="app_name">Yavadevs</string>


    <!--Titulos-->
    <string name="login">Iniciar sesión</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="carrito">Carrito de la compra</string>
    <string name="guia">Guia de usuario</string>
    <string name="recuperar_password">Recuperación de la contraseña</string>

    <!--Mensaje-->
    <string name="tienes_cuenta">Ya tienes cuenta? </string>
    <string name="eliminar_producto">Estas seguro que quieres eliminar el producto</string>
    <string name="precio_total">Precio total :</string>
    <string name="producto_añadido">Producto añadido a su carrito</string>
    <string name="carrito_vacio">Tu carrito esta vacío, triste y solo :(</string>
    <string name="password_olvidada">Has olvidado la contraseña?</string>
    <string name="sin_stock">No queda stock :(</string>

    <!--Buttons-->
    <string name="btn_no_account">No tienes cuenta? Registrate ahora</string>
    <string name="btn_registrar">Registrar</string>
    <string name="btn_aceptar">Aceptar</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="btn_add">Añadir</string>
    <string name="btn_eliminar">Eliminar producto</string>
    <string name="btn_abrir_scanner_QR">Escanear QR</string>
    <string name="btn_volver">Volver</string>

    <!--Checkbox-->
    <string name="cb_aceptar_terminos">Acepta los terminos </string>

    <!--InputDefault-->
    <string name="cantidad_default">1</string>

    <!--Placeholder-->
    <string name="placeholder_correo">Introduce el correo</string>
    <string name="placeholder_password">Introduce la contraseña</string>
    <string name="placeholder_nombre">Introduce tu nombre</string>
    <string name="placeholder_repeat_password">Repita la contraseña</string>

    <!--Control de errores-->
    <string name="error_campos_vacios">Introduce todos los datos</string>
    <string name="error_passwords_diferentes">Contraseñas no coinciden</string>
    <string name="error_terminos_sin_aceptar">Debes aceptar los terminos</string>
    <string name="error_autenticacion">No se pudo hacer login</string>
    <string name="error_conexion_DB">El tiempo de espera fue mayor al esperado</string>
    <string name="error_correo_no_existe">Correo no registrado</string>
    <string name="error_password">Contraseña no válida</string>
    <string name="error_correo_existe">El correo ya esta registrado</string>
    <string name="error_stock_insuficiente">No queda stock suficiente para la cantidad seleccionada</string>
</resources>