<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_theme"
    tools:context=".auth.Registrar">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="250dp"
        android:layout_height="66dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/crear_cuenta"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivInfoRegistrar"
        android:layout_width="67dp"
        android:layout_height="49dp"
        android:layout_marginStart="328dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_info"
        app:tint="@color/info" />

    <Button
        android:id="@+id/btnRegistrarRegistrar"
        android:layout_width="354dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="96dp"
        android:backgroundTint="@color/btn_azul"
        android:text="@string/btn_registrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRepetirPasswordRegistrar" />

    <TextView
        android:id="@+id/tvTienesCuentaRegistrar"
        android:layout_width="148dp"
        android:layout_height="28dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/tienes_cuenta"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegistrarRegistrar" />

    <TextView
        android:id="@+id/tvLoginRegistrar"
        android:layout_width="124dp"
        android:layout_height="29dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/azul_link"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/tvTienesCuentaRegistrar"
        app:layout_constraintTop_toBottomOf="@+id/btnRegistrarRegistrar" />

    <EditText
        android:id="@+id/etNombreRegistrar"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/light_purple"
        android:ems="10"
        android:hint="@string/placeholder_nombre"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toEndOf="@+id/ivNombreRegistrar"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/etCorreoRegistrar"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/light_purple"
        android:ems="10"
        android:hint="@string/placeholder_correo"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toEndOf="@+id/ivCorreoRegistrar"
        app:layout_constraintTop_toBottomOf="@+id/etNombreRegistrar" />

    <EditText
        android:id="@+id/etPasswordRegistrar"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/light_purple"
        android:ems="10"
        android:hint="@string/placeholder_password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toEndOf="@+id/ivContraseñaRegistrar"
        app:layout_constraintTop_toBottomOf="@+id/etCorreoRegistrar" />

    <ImageView
        android:id="@+id/ivContraseñaRegistrar"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        app:tint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCorreoRegistrar"
        app:srcCompat="@android:drawable/ic_lock_idle_lock" />

    <ImageView
        android:id="@+id/ivRepetirContraseñaRegistrar"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        app:tint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordRegistrar"
        app:srcCompat="@android:drawable/ic_lock_idle_lock" />

    <EditText
        android:id="@+id/etRepetirPasswordRegistrar"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/light_purple"
        android:ems="10"
        android:hint="@string/placeholder_repeat_password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toEndOf="@+id/ivRepetirContraseñaRegistrar"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordRegistrar" />

    <ImageView
        android:id="@+id/ivCorreoRegistrar"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        app:tint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombreRegistrar"
        app:srcCompat="@android:drawable/sym_action_email" />

    <ImageView
        android:id="@+id/ivNombreRegistrar"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/ic_usuario"
        app:tint="@color/white" />

    <CheckBox
        android:id="@+id/cbTerminosRegistrar"
        android:layout_width="216dp"
        android:layout_height="53dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="28dp"
        android:text="@string/cb_aceptar_terminos"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRepetirPasswordRegistrar" />

</androidx.constraintlayout.widget.ConstraintLayout>
