<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_theme"
    tools:context=".modal_password_olvidada">

    <TextView
        android:id="@+id/tvTituloModalPasswordOlvidada"
        android:layout_width="295dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:gravity="center"
        android:text="@string/recuperar_password"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloModalPasswordOlvidada"
        app:srcCompat="@android:drawable/sym_action_email"
        app:tint="@color/white" />

    <EditText
        android:id="@+id/etEmailModalPasswordOlvidada"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/light_purple"
        android:ems="10"
        android:hint="@string/placeholder_correo"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloModalPasswordOlvidada" />

    <Button
        android:id="@+id/btnCancelarModalPasswordOlvidada"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/btn_cancelar"
        android:text="@string/btn_cancelar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailModalPasswordOlvidada" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="243dp"
        android:layout_height="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAceptarModalPasswordOlvidada" />

    <Button
        android:id="@+id/btnAceptarModalPasswordOlvidada"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/btn_azul"
        android:text="@string/btn_aceptar"
        app:layout_constraintStart_toEndOf="@+id/btnCancelarModalPasswordOlvidada"
        app:layout_constraintTop_toBottomOf="@+id/etEmailModalPasswordOlvidada" />

</androidx.constraintlayout.widget.ConstraintLayout>