<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_theme">


    <ImageView
        android:id="@+id/ivProductoModaEliminarProducto"
        android:layout_width="136dp"
        android:layout_height="136dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_eliminar"
        app:tint="@color/danger" />

    <TextView
        android:id="@+id/tvMensajeModalEliminarProducto"
        android:layout_width="258dp"
        android:layout_height="67dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/eliminar_producto"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivProductoModaEliminarProducto" />

    <Button
        android:id="@+id/btnCancelarModalEliminarProducto"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/btn_cancelar"
        android:text="@string/btn_cancelar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMensajeModalEliminarProducto" />

    <Button
        android:id="@+id/btnEliminarProductoModalEliminarProducto"
        android:layout_width="154dp"
        android:layout_height="55dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/danger"
        android:text="@string/btn_eliminar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toEndOf="@+id/btnCancelarModalEliminarProducto"
        app:layout_constraintTop_toBottomOf="@+id/tvMensajeModalEliminarProducto" />

    <TextView
        android:id="@+id/tvDejarMarginModalError2"
        android:layout_width="341dp"
        android:layout_height="13dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEliminarProductoModalEliminarProducto" />

</androidx.constraintlayout.widget.ConstraintLayout>